syntax = "proto3";

package kms;

// Interface exported by the server.
service kms {
  //
  // Creates a new key
  //
  rpc CreateKey(CreateKeyRequest) returns (KeyMetadata) {}
}

// KeyMetadata is a representation of an Encryption Key
message KeyMetadata {
  string KeyID = 1;
  string CreationDate = 2;
  string Description = 3;
  bool Enabled = 4;
  string KeyType = 5;
}

// CreateKeyRequest will create a key
message CreateKeyRequest {
  string Description = 1;
}
